# Trading_System

./: .gitignore  1_AUDIT_MASTER.md  AUDIT.md  README.md  pyproject.toml
_codex_reports/: local_sync_b278c9f.md  pre_handoff_gate_001.md  pre_handoff_gate_002_current_main.md  pre_handoff_gate_003_final_handoff.md  pre_handoff_gate_004_final_after_spt.md  pre_handoff_gate_005_after_frozen_state.md  pre_handoff_gate_006_after_simulated_state_boundary.md  pre_handoff_gate_007_after_transition_protocol.md  pre_handoff_gate_008_transition_execution.md  pre_handoff_gate_009_prompt_role_redundancy_cleanup.md  pre_handoff_gate_010_next_work_item_spec16.md  pre_handoff_gate_011_mandatory_next_work_item.md
audit/: README.md  action_list.md  conflict_register.md  decision_matrix.md
config/: indicator_registry.yaml  regime_matrix.yaml  risk_guardrails.yaml  rule_registry.yaml  universe.example.yaml
examples/: pre_trade_dry_run_scenarios.json
specs/: 00_project_overview_v1_6_1.md  01_architecture_overview_v1_6_1.md  02_llm_output_schema_v1.md  03_risk_metrics_v1.md  04_guardrails_v1.md  05_deductive_rules_v1.md  06_validator_pipeline_v1.md  07_station_1_pre_llm_validator.md  08_station_2_llm_meta_manager.md  09_station_3_technical_schema_validator.md  10_station_4_business_logic_validator.md  11_station_5_market_risk_validator.md  12_station_6_portfolio_engine.md  13_station_7_post_trade_risk_validator.md  14_station_8_order_validator.md  15_audit_log_core_v1.md  16_execution_simulator_core_v1.md  17_pre_order_proposed_order_contract_core_v1.md  94_start_audit_protocol.md  (+8 more)
(+26 files in other folders)
