[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-allocator-dry-run"
version = "0.1.0"
description = "Deterministic pre-trade control dry-run demo"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
pre-trade-control-dry-run = "pre_trade_control_dry_run:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["pre_trade_controls", "pre_trade_control_dry_run"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
